# yggdrasil

./: CMakeLists.txt  README.md
Box2D_v2.2.1/: CMakeLists.txt
data/chunks/: test.chunk.xml
data/images/sprites/: readme.txt
data/maps/: test.map.xml
data/maps/Midgard/: midgard.xml
data/sprites/: sprite_test.xml
data/templates/: mob1.template.xml
editor/: CMakeLists.txt
editor/data/: icons.qrc
editor/include/: GLWidget.hpp  MapEditorWindow.hpp  PlatformDockWidget.hpp  common_editor.hpp
editor/include/sprite/: CurrentFrameWidget.hpp  GraphicsBoxItem.hpp  GraphicsCurrentFrameView.hpp  SpriteEditorWindow.hpp
editor/src/: GLWidget.cpp  MapEditorWindow.cpp  PlatformDockWidget.cpp  main.cpp
editor/src/sprite/: CurrentFrameWidget.cpp  GraphicsBoxItem.cpp  GraphicsCurrentFrameView.cpp  SpriteEditorWindow.cpp
editor/ui/: AnimatedSprite.qml  BoxEditor.qml  MapEditorWindow.ui  PlatformDockWidget.ui  SpriteEditorWindow.ui  TimeLine.qml
glew-1.9.0/include/GL/: glew.h
tools/: fileGenerator.py
tools/lol_model_loader/: Olaf.skn  main.c
yggdrasil/engine/: CMakeLists.txt
yggdrasil/engine/AntTweakBar/include/: AntTweakBar.h
yggdrasil/engine/AntTweakBar/src/: TwBar.cpp  TwMgr.cpp  TwMgr.h  TwOpenGL.cpp  TwOpenGL.h  TwOpenGLCore.cpp  TwOpenGLCore.h  TwPrecomp.h
yggdrasil/engine/include/animation/: AnimationComponent.hpp  AnimationSystem.hpp
yggdrasil/engine/include/core/: HumanInterfaceDevice.hpp  Log.hpp  ObjectManager.hpp  SpriteComponent.hpp  StringID.hpp  SystemInterface.hpp  core.hpp
yggdrasil/engine/include/core/assets/: AssetLibrary.hpp  Chunk.hpp  Image.hpp  Map.hpp  Sprite.hpp
yggdrasil/engine/include/core/config/: Config.hpp
yggdrasil/engine/include/core/ecs/: Component.hpp  Entity.hpp  EntityInfo.hpp  World.hpp
yggdrasil/engine/include/core/ecs/exceptions/: BitIndexOutOfBounds.hpp  BitcountOutOfRange.hpp  CompMapUnregistered.hpp  IndexOutOfBounds.hpp  NotImplemented.hpp
yggdrasil/engine/include/core/ecs/managers/: ComponentManager.hpp  ComponentTypeManager.hpp  EntityManager.hpp  EventManager.hpp  GroupManager.hpp  Manager.hpp  ManagerManager.hpp  SystemManager.hpp
yggdrasil/engine/include/core/ecs/systems/: EntityProcessingSystem.hpp  EntitySystem.hpp
yggdrasil/engine/include/core/ecs/utils/: BitMask.hpp  Bitset.hpp
yggdrasil/engine/include/game/: GameSystem.hpp  Map.hpp  PlayerComponent.hpp  PlayerSystem.hpp  PositionComponent.hpp
yggdrasil/engine/include/physic/: PhysicComponent.hpp  PhysicSystem.hpp
yggdrasil/engine/include/render/: DebugRenderer.hpp  Quad.hpp  RenderComponent.hpp  RenderSystem.hpp  View.hpp  shaders.hpp
yggdrasil/engine/include/render/shaders/: debug_shaders.hpp  sprite_shaders.hpp
yggdrasil/engine/include/utils/: Indexer.hpp
yggdrasil/engine/src/animation/: AnimationSystem.cpp
yggdrasil/engine/src/core/: StringID.cpp
yggdrasil/engine/src/core/assets/: AssetLibrary.cpp  Chunk.cpp  Map.cpp  Sprite.cpp
yggdrasil/engine/src/core/ecs/: EntityInfo.cpp  World.cpp
yggdrasil/engine/src/core/ecs/managers/: ComponentManager.cpp  EntityManager.cpp  GroupManager.cpp  Manager.cpp  ManagerManager.cpp  SystemManager.cpp
yggdrasil/engine/src/core/ecs/systems/: EntityProcessingSystem.cpp  EntitySystem.cpp
yggdrasil/engine/src/game/: GameSystem.cpp  Map.cpp  PlayerSystem.cpp
yggdrasil/engine/src/physic/: PhysicComponent.cpp  PhysicSystem.cpp
yggdrasil/engine/src/render/: DebugRenderer.cpp  Quad.cpp  RenderSystem.cpp
yggdrasil/engine/src/render/shaders/: debug_shaders.cpp  sprite_shaders.cpp
yggdrasil/game/: CMakeLists.txt
yggdrasil/game/include/: SFMLHumanInterfaceDevice.hpp  SFMLSystemInterface.hpp
yggdrasil/game/src/: main.cpp
